devops/airflowk8s/airflow2/airflow/templates/scheduler/networkpolicy.yaml
---
# Source: airflow/templates/scheduler/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-airflow-scheduler
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: airflow
    app.kubernetes.io/version: 2.10.3
    helm.sh/chart: airflow-21.5.1
    app.kubernetes.io/component: scheduler
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: airflow
      app.kubernetes.io/component: scheduler
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
        - port: 8793
